<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">Digital Heroes</string>
    <string name="action_settings">Settings</string>
    <string name="share">Compartir</string>
    <string name="failed_loading_feed">No se han podido cargar las noticias</string>
    <string name="context_menu_show">Ver contenido</string>
    <string name="context_menu_toggle_favourites">Añadir/Eliminar favorito</string>
    <string name="navigation_drawer_section1">Ver todos</string>
    <string name="navigation_drawer_section2">Super Poderes</string>
    <string name="navigation_drawer_section3">Super Héroes</string>
    <string name="navigation_drawer_section4">Favoritos</string>
    <string name="navigation_drawer_section5">Contacta</string>
    <string name="view_pager_section1">Digital Heroes</string>
    <string name="view_pager_section2">Categorías</string>
    <string name="view_pager_section3">Autores</string>
    <string name="loading">Cargando...</string>
    <string name="description">Descripción</string>
    <string name="title">Título</string>
    <string name="image">Imagen</string>
    <string name="no_image">La imagen no se pudo cargar</string>
    <string name="category_ideas">Big Ideas</string>
    <string name="category_ideas_description">Ocurrencias, experimentos, genialidades, toda clase de ideas y siempre, cuanto más creativas e innovadoras… ¡mejor!</string>
    <string name="category_content">Content lovers</string>
    <string name="category_content_description">Amantes de las estrategias de marketing de contenidos, los copys cuidados hasta el último detalle, Social Media, herramientas… Porque el contenido es el rey</string>
    <string name="category_google">Google friendly</string>
    <string name="category_google_description">Nos hemos echado un amigo de esos difíciles de complacer. Por ello, hablamos de trucos, herramientas, analítica web, SEO y SEM para aprender a conquistarlo</string>
    <string name="category_inside">Inside Góbalo</string>
    <string name="category_inside_description">Siendo una agencia creativa digital las mejores ideas surgen en el proceso creativo y de desarrollo de los proyectos, la inspiración nos pilla trabajando sin duda</string>
    <string name="author_01101">Super 01101</string>
    <string name="author_01101_description">Experto en química especializado en el proceso exotérmico de transformar cafeína en SW de gestión, CMS, CMR y Webs 2.0</string>
    <string name="author_code">Super Code</string>
    <string name="author_code_description">PHP, Java, JavaScript… No importa que lenguaje sea, a la larga todos dan la misma guerra</string>
    <string name="author_craft">Super Craft</string>
    <string name="author_craft_description"> ¡Ilustración, diseño, pintura, web, lápices, foto, html, css, video, ganchillo! ¡Dame un soporte y le doy mi toque! Apasionada del arte, el diseño, y el mundo online. Llevo la creatividad al extremo en cada rincón de mi vida</string>
    <string name="author_crea">Super Crea</string>
    <string name="author_crea_description">Apasionado de las cosas simples con detalles curiosos, del do/re/mi/fa/sol/la/si sostenido y sin sostener, aporto un grano de arena a cada proyecto, que permita hacerlo un poquito más grande…¡Todo un reto!</string>
    <string name="author_cycle">Super Cycle</string>
    <string name="author_cycle_description">Como Induráin de la agencia, pedaleo sin descanso para que las estrategias digitales te conduzcan a tus objetivos. En constante aprendizaje y siempre disfrutando del camino</string>
    <string name="author_idea">Super Idea</string>
    <string name="author_idea_description">Optimismo en las venas para intentar que los proyectos nazcan, crezcan, se reproduzcan y emancipen de forma natural y controlada… “Pequeño illustrator, ya sé que estás a punto de decirme adiós”</string>
    <string name="author_numbers">Super Numbers</string>
    <string name="author_numbers_description">¡Escalar montañas de papeles, envíos, proveedores, emails y facturas, es todo un reto!… Descender, organizar y gestionar todo, clave para que funcionemos como un reloj</string>
    <string name="author_pencil">Super Pencil</string>
    <string name="author_pencil_description">Podría llevar la creatividad como segundo nombre. Cuando no estoy aquí estoy en las nubes, ¡cogiendo ideas!. Cualquier rumbo que se le antoje a un proyecto lo hago realidad, todo para dar en la diana</string>
    <string name="author_pixel">Super Pixel</string>
    <string name="author_pixel_description">Del pixel al navegador, del navegador al pixel, y tiro porque me toca. Todos los dispositivos, todos los sistemas, Firebug siempre a mi lado y Explorer como siempre… ¡sin comentarios!</string>
    <string name="author_sem">Super SEM</string>
    <string name="author_sem_description">Licenciada en ADE, acabé posicionando negocios en buscadores por casualidad y entré de lleno en el mundo del Social Media. Solo me queda reconocer que el marketing online….¡no está nada mal!</string>
    <string name="author_social">Super Social</string>
    <string name="author_social_description">Publicista apasionada de las marcas, la innovación, social media, las nuevas tecnologías, la comunicación y cualquier idea creativa. El límite es la imaginación</string>
    <string name="author_speed">Super Speed</string>
    <string name="author_speed_description">Subiendo/bajando escaleras, un café, se me enfría, vuelvo a calentarlo; una reunión, otra, otra; una llamada, otra, otra y otra… un chat, otro, otro, otro y otro; un hangout (sólo uno ;-)</string>
    <string name="author_trix">Super Trix</string>
    <string name="author_trix_description">Creativa, organizada y perseverante: un cóctel perfecto para sacar proyectos ambiciosos y convertirlos en exitosos</string>
    <string name="author_01101_short">01101</string>
    <string name="author_code_short">Code</string>
    <string name="author_craft_short">Craft</string>
    <string name="author_crea_short">Crea</string>
    <string name="author_idea_short">Idea</string>
    <string name="author_numbers_short">Numbers</string>
    <string name="author_pencil_short">Pencil</string>
    <string name="author_pixel_short">Pixel</string>
    <string name="author_sem_short">SEM</string>
    <string name="author_social_short">Social</string>
    <string name="author_speed_short">Speed</string>
    <string name="author_trix_short">Trix</string>
    <string name="icon_glass">&#xf000;</string>
    <string name="icon_music">&#xf001;</string>
    <string name="icon_search">&#xf002;</string>
    <string name="icon_envelope">&#xf003;</string>
    <string name="icon_heart">&#xf004;</string>
    <string name="icon_star">&#xf005;</string>
    <string name="icon_star_empty">&#xf006;</string>
    <string name="icon_user">&#xf007;</string>
    <string name="icon_film">&#xf008;</string>
    <string name="icon_th_large">&#xf009;</string>
    <string name="icon_th">&#xf00a;</string>
    <string name="icon_th_list">&#xf00b;</string>
    <string name="icon_ok">&#xf00c;</string>
    <string name="icon_remove">&#xf00d;</string>
    <string name="icon_zoom_in">&#xf00e;</string>
    <string name="icon_zoom_out">&#xf010;</string>
    <string name="icon_off">&#xf011;</string>
    <string name="icon_signal">&#xf012;</string>
    <string name="icon_cog">&#xf013;</string>
    <string name="icon_trash">&#xf014;</string>
    <string name="icon_home">&#xf015;</string>
    <string name="icon_file_o">&#xf016;</string>
    <string name="icon_time">&#xf017;</string>
    <string name="icon_road">&#xf018;</string>
    <string name="icon_download_alt">&#xf019;</string>
    <string name="icon_download">&#xf01a;</string>
    <string name="icon_upload">&#xf01b;</string>
    <string name="icon_inbox">&#xf01c;</string>
    <string name="icon_play_circle">&#xf01d;</string>
    <string name="icon_repeat">&#xf01e;</string>
    <string name="icon_refresh">&#xf021;</string>
    <string name="icon_list_alt">&#xf022;</string>
    <string name="icon_lock">&#xf023;</string>
    <string name="icon_flag">&#xf024;</string>
    <string name="icon_headphones">&#xf025;</string>
    <string name="icon_volume_off">&#xf026;</string>
    <string name="icon_volume_down">&#xf027;</string>
    <string name="icon_volume_up">&#xf028;</string>
    <string name="icon_qrcode">&#xf029;</string>
    <string name="icon_barcode">&#xf02a;</string>
    <string name="icon_tag">&#xf02b;</string>
    <string name="icon_tags">&#xf02c;</string>
    <string name="icon_book">&#xf02d;</string>
    <string name="icon_bookmark">&#xf02e;</string>
    <string name="icon_print">&#xf02f;</string>
    <string name="icon_camera">&#xf030;</string>
    <string name="icon_font">&#xf031;</string>
    <string name="icon_bold">&#xf032;</string>
    <string name="icon_italic">&#xf033;</string>
    <string name="icon_text_height">&#xf034;</string>
    <string name="icon_text_width">&#xf035;</string>
    <string name="icon_align_left">&#xf036;</string>
    <string name="icon_align_center">&#xf037;</string>
    <string name="icon_align_right">&#xf038;</string>
    <string name="icon_align_justify">&#xf039;</string>
    <string name="icon_list">&#xf03a;</string>
    <string name="icon_indent_left">&#xf03b;</string>
    <string name="icon_indent_right">&#xf03c;</string>
    <string name="icon_facetime_video">&#xf03d;</string>
    <string name="icon_picture">&#xf03e;</string>
    <string name="icon_pencil">&#xf040;</string>
    <string name="icon_map_marker">&#xf041;</string>
    <string name="icon_adjust">&#xf042;</string>
    <string name="icon_tint">&#xf043;</string>
    <string name="icon_edit">&#xf044;</string>
    <string name="icon_share">&#xf045;</string>
    <string name="icon_check">&#xf046;</string>
    <string name="icon_move">&#xf047;</string>
    <string name="icon_step_backward">&#xf048;</string>
    <string name="icon_fast_backward">&#xf049;</string>
    <string name="icon_backward">&#xf04a;</string>
    <string name="icon_play">&#xf04b;</string>
    <string name="icon_pause">&#xf04c;</string>
    <string name="icon_stop">&#xf04d;</string>
    <string name="icon_forward">&#xf04e;</string>
    <string name="icon_fast_forward">&#xf050;</string>
    <string name="icon_step_forward">&#xf051;</string>
    <string name="icon_eject">&#xf052;</string>
    <string name="icon_chevron_left">&#xf053;</string>
    <string name="icon_chevron_right">&#xf054;</string>
    <string name="icon_plus_sign">&#xf055;</string>
    <string name="icon_minus_sign">&#xf056;</string>
    <string name="icon_remove_sign">&#xf057;</string>
    <string name="icon_ok_sign">&#xf058;</string>
    <string name="icon_question_sign">&#xf059;</string>
    <string name="icon_info_sign">&#xf05a;</string>
    <string name="icon_screenshot">&#xf05b;</string>
    <string name="icon_remove_circle">&#xf05c;</string>
    <string name="icon_ok_circle">&#xf05d;</string>
    <string name="icon_ban_circle">&#xf05e;</string>
    <string name="icon_arrow_left">&#xf060;</string>
    <string name="icon_arrow_right">&#xf061;</string>
    <string name="icon_arrow_up">&#xf062;</string>
    <string name="icon_arrow_down">&#xf063;</string>
    <string name="icon_share_alt">&#xf064;</string>
    <string name="icon_resize_full">&#xf065;</string>
    <string name="icon_resize_small">&#xf066;</string>
    <string name="icon_plus">&#xf067;</string>
    <string name="icon_minus">&#xf068;</string>
    <string name="icon_asterisk">&#xf069;</string>
    <string name="icon_exclamation_sign">&#xf06a;</string>
    <string name="icon_gift">&#xf06b;</string>
    <string name="icon_leaf">&#xf06c;</string>
    <string name="icon_fire">&#xf06d;</string>
    <string name="icon_eye_open">&#xf06e;</string>
    <string name="icon_eye_close">&#xf070;</string>
    <string name="icon_warning_sign">&#xf071;</string>
</resources>