<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity$DummySectionFragment" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/orange"></LinearLayout>

            <LinearLayout
                android:id="@+id/lyBinary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/btn_author_01101"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ic_super_01101"
                    style="@style/btn_author_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/author_01101"
                        android:background="@drawable/btn_author_01101"
                        android:paddingBottom="5dp"
                        style="@style/btn_category" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="0dp"
                        android:text="@string/author_01101_description"
                        android:background="@drawable/btn_author_01101"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyCycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/btn_author_cycle"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ic_super_cycle"
                    style="@style/btn_author_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/author_cycle"
                        android:background="@drawable/btn_author_cycle"
                        android:paddingBottom="5dp"
                        style="@style/btn_category" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="0dp"
                        android:text="@string/author_cycle_description"
                        android:background="@drawable/btn_author_cycle"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/btn_author_code"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ic_super_code"
                    style="@style/btn_author_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/author_code"
                        android:background="@drawable/btn_author_code"
                        android:paddingBottom="5dp"
                        style="@style/btn_category" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="0dp"
                        android:text="@string/author_code_description"
                        android:background="@drawable/btn_author_code"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyCr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/btn_author_craft"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ic_super_craft"
                    style="@style/btn_author_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/author_craft"
                        android:background="@drawable/btn_author_craft"
                        android:paddingBottom="5dp"
                        style="@style/btn_category" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="0dp"
                        android:text="@string/author_craft_description"
                        android:background="@drawable/btn_author_craft"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyCrea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/btn_author_crea"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ic_super_crea"
                    style="@style/btn_author_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/author_crea"
                        android:background="@drawable/btn_author_crea"
                        android:paddingBottom="5dp"
                        style="@style/btn_category" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="0dp"
                        android:text="@string/author_crea_description"
                        android:background="@drawable/btn_author_crea"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyIdea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/btn_author_idea"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ic_super_idea"
                    style="@style/btn_author_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/author_idea"
                        android:background="@drawable/btn_author_idea"
                        android:paddingBottom="5dp"
                        style="@style/btn_category" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="0dp"
                        android:text="@string/author_idea_description"
                        android:background="@drawable/btn_author_idea"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyNumbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/btn_author_numbers"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ic_super_numbers"
                    style="@style/btn_author_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/author_numbers"
                        android:background="@drawable/btn_author_numbers"
                        android:paddingBottom="5dp"
                        style="@style/btn_category" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="0dp"
                        android:text="@string/author_numbers_description"
                        android:background="@drawable/btn_author_numbers"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>
		    
		    <Button
		        android:id="@+id/btnPencil"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/author_pencil"
		        android:drawableLeft="@drawable/ic_super_pencil"
		        android:layout_marginTop="10dp"
		        android:background="@drawable/btn_author_pencil"
		        style="@style/btn_author" />
		    
		    <Button
		        android:id="@+id/btnPixel"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/author_pixel"
		        android:drawableLeft="@drawable/ic_super_pixel"
		        android:layout_marginTop="10dp"
		        android:background="@drawable/btn_author_pixel"
		        style="@style/btn_author" />
		    
		    <Button
		        android:id="@+id/btnSem"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/author_sem"
		        android:drawableLeft="@drawable/ic_super_sem"
		        android:layout_marginTop="10dp"
		        android:background="@drawable/btn_author_sem"
		        style="@style/btn_author" />
		    
		    <Button
		        android:id="@+id/btnSocial"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/author_social"
		        android:drawableLeft="@drawable/ic_super_social"
		        android:layout_marginTop="10dp"
		        android:background="@drawable/btn_author_social"
		        style="@style/btn_author" />
		    
		    <Button
		        android:id="@+id/btnSpeed"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/author_speed"
		        android:drawableLeft="@drawable/ic_super_speed"
		        android:layout_marginTop="10dp"
		        android:background="@drawable/btn_author_speed"
		        style="@style/btn_author" />
		    
		    <Button
		        android:id="@+id/btnTrix"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/author_trix"
		        android:drawableLeft="@drawable/ic_super_trix"
		        android:layout_marginTop="10dp"
		        android:background="@drawable/btn_author_trix"
		        style="@style/btn_author" />
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>
